// Copyright 2020 The CabalÄ« Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     https://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package nl.co.gram.camarilla;
option java_package = "nl.co.gram.cabalee";
option java_multiple_files = true;

import "google/protobuf/timestamp.proto";

enum MsgType {
  UNKNOWN_MSGTYPE = 0;
  CABAL_MESSAGE_V1 = 3;
  KEEPALIVE_MESSAGE_V1 = 4;
}

message Payload {
  oneof kind {
    MessageContents cleartext_broadcast = 1;
    SelfDestruct self_destruct = 2;
  }
}

message SelfDestruct {
  string text = 1;
}

message MessageContents {
  bytes from = 1;
  string text = 3;
}
