syntax = "proto3";

package nl.co.gram.outernet;
option java_package = "nl.co.gram.outernet";
option java_multiple_files = true;

message Hello {
  fixed64 id = 1;
}

enum MsgType {
  UNKNOWN_MSGTYPE = 0;
  HELLO = 1;
  BROADCAST = 2;
}

message Hop {
  fixed64 id = 1;
  int64 elapsed_realtime_nanos = 2;
}

message Transport {
  bytes network_id = 1;
  bytes message = 2;
  bytes message_signature = 3;
}
